# pDST-calc

./: .gitignore  LICENSE  Makefile  README.md  TESTING.md  index.html  pyproject.toml  requirements.txt  setup.py  test_session_restoration.py
.github/: PUBLISHING_SETUP.md
.github/workflows/: pypi-publish.yml  test-pypi-auto-publish.yml  test-pypi-publish-cli.yml  test-pypi-publish-lib.yml  test-pypi-publish.yml
app/: README.md  __init__.py
app/api/: auth.py  database.py  drug_database.py
app/api/tests/: test_database.py  test_drug_database.py
app/cli/: README.md  main.py  pyproject.toml  styling.py
app/cli/tests/: __init__.py  test_argument_parsing.py  test_cli_main.py  test_error_handling.py  test_input_validation.py  test_integration.py  test_logging.py
app/cli/tests/data/: test_3.csv  test_4.csv
app/shiny/: app.py  app_backup.py  generate_pdf.py  session_handler.py
app/shiny/tests/: README.md  test_runner.py  test_shiny_app.py
archive/: removed_code.py
data/: .~lock.tb_drugs.csv#  README.md  tb_drugs.csv
db/src/: README.md  supp_calc.py
docs/: CALCULATION_FORMULAE.md  DEVELOPMENT_LOG.md  DST_EDUCATIONAL_GUIDE.md  JOSS_BLoubser.md  TESTING.md  USER_MANUAL.md
lib/: README.md  __init__.py  auth.py  database.py  drug_database.py  dst_calc.py  pyproject.toml  supp_calc.py
lib/src/: README.md  supp_calc.py
lib/tests/: test_drug_database.py  test_drug_database_hypothesis.py  test_dst_calc.py  test_dst_calc_hypothesis.py  test_supp_calc.py  test_supp_calc_hypothesis.py
output/: mi  tr
publication/joss/: README_figures.md  calculations.md  figure1.txt  figure1_mermaid.mmd  manuscript.md  paper.bib  workflow_diagram.mmd
scripts/: test_runner.py
src/: README.md  __init__.py
src/cli/: main.py  styling.py
src/core/: drug_database.py  dst_calc.py  supp_calc.py
src/shinyapp/: app.py
test/: README.md
test/app/cli/: ans.txt  test_1.csv  test_1ans.csv  test_2.csv  test_5.csv
test/db/: test_dst_calc.py
test/lib/: __init__.py  test_drug_database.py  test_drug_database_hypothesis.py  test_dst_calc.py  test_dst_calc_hypothesis.py  test_supp_calc.py  test_supp_calc_hypothesis.py
tests/: .~lock.test_1ans.csv#  ans.txt  test_dst_calc.py  test_main.py
